# check-old-commit-date

./: .pre-commit-hooks.yaml  README.md  check_old_commit_date.py  setup.cfg
