[metadata]
name = check_old_commit_date
version = 0.0.1
description = Tool for preventing expired commit dates
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/whosayn/check-old-commit-date
author = Hussein Faara
author_email = faarahussein@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
py_modules = check_old_commit_date
python_requires = >=3.7

[options.entry_points]
console_scripts =
    check_old_commit_date = check_old_commit_date:main

[bdist_wheel]
universal = True
